--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,12 @@
             <artifactId>logback-core</artifactId>
             <version>1.2.3</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.3.0-alpha4</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
